--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.4.2
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.2
+coverage==7.9.2
 crispy-bootstrap5==2025.6
 cycler==0.12.1
 debugpy==1.8.14
